--- a/CSharpFilters/CSharpFilters.csproj
+++ b/CSharpFilters/CSharpFilters.csproj
@@ -116,6 +116,12 @@
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Parameter.cs">
       <SubType>Form</SubType>
     </Compile>
